Fix footer spacing on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,7 +140,7 @@ h1 a:active {
     }
 
     #hero span{
-        bottom:50px;
+        bottom:65px;
     }
 
     .form-control {
